--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
   - bundle exec rake db:schema:load
   - bundle exec rake db:test:prepare
   - bundle exec rake spec
+env:
+  - RACK_ENV=test
 after_failure:
   - "cat ./config/database.yml"
   - "bundle exec rake -T"
